Make the test find the port automatically